deploy/argoci/31argo-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-server
  namespace: bdg-blog-argoci
spec:
  template:
    spec:
      containers:
        - name: argo-server
          args:
            - server
            - "--auth-mode=client"
            - "--secure=false"
          readinessProbe:
            httpGet:
              scheme: HTTP
