deploy/argoci/12argo-event-webhook-install.yaml
apiVersion: v1
kind: Service
metadata:
  name: events-webhook
  namespace: bdg-blog-argoci
spec:
  ports:
    - port: 443
      targetPort: 443
  selector:
    app: events-webhook
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-webhook
  namespace: bdg-blog-argoci
spec:
  replicas: 1
  selector:
    matchLabels:
      app: events-webhook
  template:
    metadata:
      labels:
        app: events-webhook
    spec:
      containers:
        - args:
            - webhook-service
          image: quay.io/argoproj/argo-events:v1.7.6
          imagePullPolicy: Always
          name: webhook
      serviceAccountName: argo-events-webhook-sa
